# api-agent-scaffolding

./: .coveragerc  .env.example  .gitignore  LICENSE  README.md  pyproject.toml
app/: main.py
app/agents/: graph_builder.py  nodes.py  state.py
app/api/v1/: router.py
app/api/v1/endpoints/: agent.py  copilotkit.py  files.py  health.py  stream.py
app/core/: auth.py  checkpointer.py  config.py  dependencies.py  exceptions.py
app/domain/services/: base_service.py
app/infrastructure/snowflake/: engine.py  repository.py
app/infrastructure/storage/: file_service.py  s3_client.py
app/middleware/: auth_middleware.py  logging_middleware.py  tracing_middleware.py
app/models/: base.py  file_models.py  requests.py  responses.py
app/services/: __init__.py  conversation_service.py  copilotkit_service.py  llm_service.py
app/tools/: __init__.py  base_tool.py  query_templates.py
app/widgets/: factory.py  schemas.py
docs/: DEVELOPER_GUIDE.md  TOOLS.md
prompts/: system_prompts.yaml  tool_descriptions.yaml  tool_planner.py
scripts/: run_tests.sh  setup.sh
tests/: conftest.py
tests/integration/test_api/: test_file_endpoints.py
tests/unit/test_core/: test_auth.py
tests/unit/test_services/: test_file_service.py
